# zhop

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
demo/: config.kdl  demo.tape  layout.kdl
src/: main.rs
